--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,4 +1,6 @@
 branch-defaults:
+  hacking:
+    environment: node-express-dev
   master:
     environment: node-express-dev
     group_suffix: null
