--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "errorhandler": "^1.4.3"
+    "errorhandler": "^1.4.3",
+    "node-notifier": "^4.4.0" // See README for node-dev
   }
 }
